# nix-conf

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  PROMPT.md  README.md  README.org  flake-module.nix  flake.nix  garnix.yaml  justfile  mkdocs.yml  shell.nix
.agents/: AGENTS.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.direnv/: flake-profile-1-link  flake-profile-27-link
.github/workflows/: ci.yml  update.yml
checks/: flake-module.nix  pre-commit.nix  treefmt.nix
dev/: actions.nix  agenix.nix  devshell.nix  docs.nix  flake-module.nix  flake.nix  just.nix  nix-unit.nix  pre-commit.nix  shell.nix  treefmt.nix
dev/tests/: default.nix  testCustom.nix  testNixos.nix
docs/guides/: adding-host.md  development.md
flake/: flake-module.nix
flake/apps/: flake-module.nix
flake/dev/: actions.nix  devenv.nix  devshell.nix  files.nix  flake-module.nix  flake.nix  just.nix  nix-unit.nix  (+4 more)
flake/templates/monorepo/coding/python/: pyproject.toml
flake/templates/monorepo/coding/python/src/shared/: __init__.py  pyproject.toml
home/: README.org  flake-module.nix
hosts/: README.org  deploy.nix  flake-module.nix  pc.nix
lib/: attrsets.nix  custom.nix  default.nix  flake-module.nix  modules.nix  nixos.nix  options.nix  shared.nix
modules/: README.org  flake-module.nix
overlays/: README.org  custom-package.nix  default.nix  flake-module.nix
parts/: default.nix  nix-unit.nix  pre-commit.nix  treefmt.nix
scripts/: default.nix  install.sh  rebuild.sh
tests/: default.nix  nix-unit.nix
(+730 files in other folders)
