[project]
name = "monorepo"
version = "0.1.0"
description = "Data science monorepo with UV workspace"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.uv.workspace]
members = [
    "src/shared",
    "src/core",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "marimo>=0.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["src"]
markers = [
    "slow: integration tests requiring data download",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
